# FanControlProject

./: .gitignore  CMakeLists.txt  README.md  fan_control.cpp  fan_control.h  gui_main.cpp  winring_wrapper.cpp
